--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,20 @@
         </dependency>
     </dependencies>
 
-    <properties>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
+    <properties>
+        <jdk.version>1.7</jdk.version>
     </properties>
 
 </project>
